syntax = "proto3";

package atomix.primary_elector;

import "atomix/primitive/partition.proto";

option java_package = "io.atomix.primitive.partition.impl";
option java_outer_classname = "PrimaryElectorProto";
option java_multiple_files = true;

// Primary elector snapshot format
message PrimaryElectorSnapshot {
    repeated int64 sessions = 1;
    repeated ElectionState elections = 2;
}

// Primary election state
message ElectionState {
    atomix.primitive.partition.PartitionId partition_id = 1;
    ElectionCandidate primary = 2;
    int64 term = 3;
    int64 timestamp = 4;
    repeated ElectionCandidate candidates = 5;
}

// Primary election candidate
message ElectionCandidate {
    atomix.primitive.partition.GroupMember member = 1;
    int64 session_id = 2;
}

message EnterRequest {
    atomix.primitive.partition.PartitionId partition_id = 1;
    atomix.primitive.partition.GroupMember member = 2;
}

message EnterResponse {
    atomix.primitive.partition.PrimaryTerm term = 1;
}

message GetTermRequest {
    atomix.primitive.partition.PartitionId partition_id = 1;
}

message GetTermResponse {
    atomix.primitive.partition.PrimaryTerm term = 1;
}

message ListenRequest {
    atomix.primitive.partition.PartitionId partition_id = 1;
}
